# codewar

./: CMakeLists.txt  README.md  basic_op.cpp  boolean_to_string.cpp  grade_book.cpp  main.cpp
src/: better_than_average.cpp  square_sum.cpp
